k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ltt-lca
  labels:
    app: ltt-cloud
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    component: api
