k8s/pwa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pwa
  namespace: ltt-lca
  labels:
    app: ltt-cloud
    component: pwa
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: pwa
