k8s/redis.yaml
# Redis Deployment + Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ltt-lca
  labels:
    app: ltt-cloud
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        app: ltt-cloud
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ltt-lca
  labels:
    app: ltt-cloud
    component: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    component: redis
