k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: ltt-lca
  labels:
    app: ltt-cloud
    component: ui
spec:
  type: ClusterIP
  ports:
    - port: 8501
      targetPort: 8501
  selector:
    component: ui
